# ab-analise-contratos-publicos

./: README.md  pyproject.toml
ab/public/comex/: CORRECAO_FINAL.md  CORRECAO_GRAFICOS.md  INSTRUCOES_EXECUCAO.md  MAPAS_README.md  README_v2.md  pe_imp_exp.ipynb  pe_imp_exp_v2.ipynb  taipy_comex_app.css  taipy_comex_app.py
ab/public/contracts/: pe_recife.ipynb  pe_recife_intermedium.ipynb  pe_recife_predictive.ipynb
data/pe/recife/: analise_categorias.csv  analise_geografica.csv  anomalias_detectadas.csv  dados_abertos_contratos.csv  dados_abertos_contratos_limpo.csv  dados_contratos_categorizado.csv  metricas_classificacao.csv  metricas_regressao.csv  modelo_classificacao.pkl
